2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala: use pointer as default of type_id and
	  marshaller_type_name for reference types
	* vala/valapointer.vala: implement get_type_id

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: deep copy GLists if necessary, patch by
	  Mathias Hasselmann
	* vapi/glib-2.0.vala: fix some printf format strings to work on ILP32
	  and LP64 platforms

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: improve support for numeric types, patch by
	  Mathias Hasselmann
	* tests/test-030.vala, tests/test-030.out, tests/test-031.vala,
	  tests/test-031.out: test numeric types
	* tests/testrunner.sh: use c99 and math library
	* tests/Makefile.am: update

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valainterface.vala: implement marshalling support
	* vala/valacodegenerator.vala: support signals with interface parameters

2007-03-20  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala: add extended runtime type support
	* vala/parser.y: also read property modifiers in set-only properties

2007-03-20  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: add GObject to the list of base types
	* vapi/glib-2.0.vala: add ref and unref methods to GObject

2007-03-20  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala, vala/valasemanticanalyzer.vala,
	  vala/valamemorymanager.vala, vala/valacodegenerator.vala,
	  vala/valacallback.vala, vala/valainvocationexpression.vala,
	  vala/valamethod.vala, vala/valaobjectcreationexpression.vala: use weak
	  local variables where appropriate
	* vala/parser.y, vala/valasemanticanalyzer.vala: default local variables
	  to strong reference
	* vala/valasemanticanalyzer.vala: don't promote local variables from
	  weak to strong reference
	* vala/valacodegenerator.vala: warn when duplicating non-reference
	  counted structs implicitly

2007-03-20  Jürg Billeter  <j@bitron.ch>
